scss/widgets/base/_scheduler.scss
/* ... */
@mixin dx-scheduler-agenda-group-mixin($offset) {
  &[dx-group-column-count='1'] {
    @include set-offset-agenda-group-mixin($offset);
  }

  &[dx-group-column-count='2'] {
    @include set-offset-agenda-group-mixin($offset * 2);
  }

  &[dx-group-column-count='3'] {
    @include set-offset-agenda-group-mixin($offset * 3);
  }
}

@mixin dx-scheduler-scrollable-offset-mixin($padding, $allDayHeight, $collapsedAllDayHeight) {
  @include dx-scheduler-group-mixin($padding);

  &.dx-scheduler-work-space-all-day {
    @include dx-scheduler-group-mixin($padding + $allDayHeight);
  }

  &.dx-scheduler-work-space-all-day-collapsed {
    @include dx-scheduler-group-mixin($padding + $collapsedAllDayHeight);
  }
}

@mixin dx-scheduler-all-day-title-mixin($baseTop) {
  &[dx-group-row-count='1'] {
    $TOP_OFFSET: $baseTop + $SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT;

    .dx-scheduler-all-day-title {
      top: $TOP_OFFSET;

      &:before {
        top: -$TOP_OFFSET + 55px;
        height: $TOP_OFFSET - $SCHEDULER_DEFAULT_HEADER_HEIGHT;
      }
    }
  }

  &[dx-group-row-count='2'] {
    $TOP_OFFSET: $baseTop + $SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT * 2;

    .dx-scheduler-all-day-title {
      top: $TOP_OFFSET;

      &:before {
        top: -$TOP_OFFSET + 55px;
        height: $TOP_OFFSET - $SCHEDULER_DEFAULT_HEADER_HEIGHT;
      }
    }
  }

  &[dx-group-row-count='3'] {
    $TOP_OFFSET: $baseTop + $SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT * 3;

    .dx-scheduler-all-day-title {
      top: $TOP_OFFSET;

      &:before {
        top: -$TOP_OFFSET + 55px;
        height: $TOP_OFFSET - $SCHEDULER_DEFAULT_HEADER_HEIGHT;
      }
    }
  }
}

@mixin dx-scheduler-header-scrollable-mixin($baseHeight) {
  &[dx-group-row-count='1'] {
    .dx-scheduler-header-scrollable {
      height: $baseHeight + $SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT + 1;
    }
  }

  &[dx-group-row-count='2'] {
    .dx-scheduler-header-scrollable {
      height: $baseHeight + $SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT * 2 + 1;
    }
  }

  &[dx-group-row-count='3'] {
    .dx-scheduler-header-scrollable {
      height: $baseHeight + $SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT * 3 + 1;
    }
  }

  .dx-scheduler-header-scrollable {
    height: $baseHeight + 1px;
  }

  &.dx-scheduler-work-space-horizontal-grouped {
    &.dx-scheduler-timeline {
      .dx-scheduler-header-scrollable {
        height: auto;
      }
    }
  }
}


@mixin set-size-timeline-horizontal-grouping-mixin($size) {
  &.dx-scheduler-work-space .dx-scheduler-date-table-scrollable {
    padding-bottom: $size;
    margin-bottom: $size;
  }
}

@mixin dx-scheduler-timeline-horizontal-grouping-mixin($baseHeight) {
  &.dx-scheduler-work-space {
    &[dx-group-row-count='1'] {
      @include set-size-timeline-horizontal-grouping-mixin($baseHeight + 40px);
    }

    &[dx-group-row-count='2'] {
      @include set-size-timeline-horizontal-grouping-mixin($baseHeight + 80px);
    }

    &[dx-group-row-count='3'] {
      @include set-size-timeline-horizontal-grouping-mixin($baseHeight + 120px);
    }
  }
}

@mixin set-size-timeline-group-table-mixin($size) {
  .dx-scheduler-group-table,
  .dx-scheduler-sidebar-scrollable,
  .dx-scheduler-sidebar-scrollable:before {
    width: $size;
  }

  .dx-scheduler-group-header-content {
    width: inherit;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .dx-scheduler-date-table-scrollable,
  .dx-scheduler-header-scrollable {
    margin-left: $size;

    .dx-rtl & {
      margin-right: $size;
      margin-left: 0;
    }
  }
}

@mixin dx-scheduler-timeline-group-table-mixin() {
  .dx-scheduler-work-space-both-scrollbar {
    .dx-scheduler-date-table-scrollable {
      margin-left: 0;
    }

    .dx-scheduler-header-scrollable.dx-scrollable {
      margin: 0;
      padding: 0;

      .dx-rtl & {
        margin: 0;
      }
    }
  }

  &[dx-group-column-count='1'] {
    @include set-size-timeline-group-table-mixin(100px);
  }

  &[dx-group-column-count='2'] {
    @include set-size-timeline-group-table-mixin(160px);
  }

  &[dx-group-column-count='3'] {
    @include set-size-timeline-group-table-mixin(240px);
  }
}
/* ... */

